commiting the config